[tool.poetry]
name = "cpsc601-38-project"
version = "0.1.0"
description = ""
authors = ["mhameeducalgary <mohammad.hameed@ucalgary.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
airsim = "^1.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
